testing/tests/melt/negative/lvalues_7.c

int main() 
{
    int n = 0;
    &n = 2; // The address of operator converts an lvalue to an rvalue. 
    return 0;
}
